<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/layout_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:cardCornerRadius="3dp"
                app:contentPadding="16dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img_logo"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_app_name"
                        android:text="@string/app_name"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="20sp"
                        android:layout_marginLeft="16dp"
                        app:layout_constraintLeft_toRightOf="@+id/img_logo"
                        app:layout_constraintTop_toTopOf="@+id/img_logo"
                        app:layout_constraintBottom_toBottomOf="@+id/img_logo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_version_title"
                        android:text="@string/version"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextBlack"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/img_logo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_version"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/txt_version_title"
                        tools:text = "1.0.0"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@android:color/white"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_app"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="16sp"
                        android:paddingTop="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:fontFamily="sans-serif-light"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_source_code"
                        android:text="@string/about_source_code_title"
                        style="@style/AboutClickableTextView"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_contact_me"
                        android:text="@string/about_contact_me"
                        style="@style/AboutClickableTextView"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>