<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_city"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_update_date"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@+id/txt_city"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/border_img_left"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/border_img_right"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/img_weather_condition"
            android:layout_marginTop="20dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@+id/txt_update_date"
            app:layout_constraintLeft_toLeftOf="@+id/border_img_left"
            app:layout_constraintRight_toRightOf="@+id/border_img_right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_temperature"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/img_weather_condition"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="56"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_description"
            android:textSize="14sp"
            android:textColor="#909090"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_temperature"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/border_info_left"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/border_info_right"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.67"/>

        <View
            android:layout_width="30dp"
            android:layout_height="2dp"
            android:id="@+id/separator"
            android:background="#B4B4B4"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/barrier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.constraint.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/barrier"
            app:barrierDirection="top"
            app:constraint_referenced_ids="img_sunrise_icon, img_wind_icon, img_humidity_icon"/>

        <ImageView
            android:layout_width="@dimen/size_icon_weather_additional_info"
            android:layout_height="@dimen/size_icon_weather_additional_info"
            android:id="@+id/img_sunrise_icon"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_sunrise_title"
            app:layout_constraintRight_toRightOf="@+id/border_info_left"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_sunrise_title"
            android:text="@string/sunrise"
            style="@style/WeatherAdditionalInfoTitle"
            app:layout_constraintBottom_toTopOf="@+id/txt_sunrise_value"
            app:layout_constraintRight_toRightOf="@+id/border_info_left"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_sunrise_value"
            style="@style/WeatherAdditionalInfoValue"
            android:layout_marginBottom="16dp"
            app:layout_constraintRight_toRightOf="@+id/border_info_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:layout_width="@dimen/size_icon_weather_additional_info"
            android:layout_height="@dimen/size_icon_weather_additional_info"
            android:id="@+id/img_wind_icon"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_wind_title"
            app:layout_constraintRight_toRightOf="@+id/border_info_right"
            app:layout_constraintLeft_toLeftOf="@+id/border_info_left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_wind_title"
            android:text="@string/wind"
            style="@style/WeatherAdditionalInfoTitle"
            app:layout_constraintBottom_toTopOf="@+id/txt_wind_value"
            app:layout_constraintRight_toRightOf="@+id/border_info_right"
            app:layout_constraintLeft_toLeftOf="@+id/border_info_left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_wind_value"
            style="@style/WeatherAdditionalInfoValue"
            android:layout_marginBottom="16dp"
            app:layout_constraintRight_toRightOf="@+id/border_info_right"
            app:layout_constraintLeft_toLeftOf="@+id/border_info_left"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:layout_width="@dimen/size_icon_weather_additional_info"
            android:layout_height="@dimen/size_icon_weather_additional_info"
            android:id="@+id/img_humidity_icon"
            android:layout_marginTop="12dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/border_info_right"
            app:layout_constraintBottom_toTopOf="@+id/txt_humidity_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_humidity_title"
            android:text="@string/humidity"
            style="@style/WeatherAdditionalInfoTitle"
            app:layout_constraintBottom_toTopOf="@+id/txt_humidity_value"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/border_info_right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_humidity_value"
            style="@style/WeatherAdditionalInfoValue"
            android:layout_marginBottom="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/border_info_right"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.SwipeRefreshLayout>